--- a/test/_css/style2.css
+++ b/test/_css/style2.css
@@ -55,7 +55,7 @@ h1.services-heading{
 }
 .top-div p
 {
-	color: #ffcccf;
+	color: #FFF;
 }
 
 .bottom-div
@@ -81,7 +81,7 @@ h1.services-heading{
 	
 	margin-left:1.3%;
 	margin-bottom:125px;
-	margin-top:122px;
+	margin-top:80px;
 	width:24%;
 	min-height: 400px;
 	
